# logr

./: .clang-format  .gitignore  .gitmodules  .travis.yml  CHANGELOG.md  CMakeLists.txt  LICENSE  README.md  appveyor.yml  build.py  clang-fmt-all.sh  conanfile.py
.github/workflows/: ci.yml
benchmarks/: CMakeLists.txt  devirt_fixup.bench.cpp  glog_bench.cpp  log4cplus_bench.cpp  logger_usage.ipp  spdlog_bench.cpp
conan/profiles/: ubu-clang-15  ubu-gcc-9
design/: checking-fmt-custom-formatting-optimizations.md  on-logr-design.md
examples/: CMakeLists.txt  boostlog_logger.cpp  ostream_logger.cpp  spdlog_logger.cpp  use_logger.hpp
logr/: CMakeLists.txt  lib-config.cmake.in  version.cmake
logr/benchmark/: CMakeLists.txt  logger_usage.ipp  spdlog_bench.cpp
logr/cmake/: lib-config.cmake.in
logr/examples/: CMakeLists.txt  glog_logger.cpp  log4cplus_logger.cpp  spdlog_logger.cpp  use_logger.hpp
logr/include/logr/: boostlog_backend.hpp  config.hpp.in  glog_backend.hpp  log4cplus_backend.hpp  logr.hpp  noop_backend.hpp  null_backend.hpp  ostream_backend.hpp  spdlog_backend.hpp  version.hpp
logr/test/: CMakeLists.txt  cb_execution_elimination.cpp  include_is_fine.cpp  levels_routing.cpp  logger_mock.hpp  writeto_msg_builder_out_usages.cpp
test_package/: CMakeLists.txt  conanfile.py  example.cpp  test_package.cpp
tests/: CMakeLists.txt  cb_execution_elimination.cpp  level_filtering.cpp  levels_routing.cpp  root_logger_type.cpp  writeto_msg_builder_out_usages.cpp
